--- a/task4/index.html
+++ b/task4/index.html
@@ -33,7 +33,7 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <th>Blended</th>
               </tr>
               <tr>
-                <td class="tm-text-left">Americano</td>
+                <td class="red-text ">Americano</td>
                 <td>$10</td>
                 <td>$15</td>
                 <td>-</td>
@@ -88,11 +88,13 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <th>Hot</th>
                 <th>Iced</th>
                 <th>Addon</th>
+                <th>Manufacturer</th>
               </tr>
               <tr>
                 <td class="tm-text-left">Pure White Milk</td>
                 <td>$5</td>
                 <td>$10</td>
+                <td>-</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -100,17 +102,20 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <td>$8</td>
                 <td>$12</td>
                 <td>$4</td>
+                <td>-</td>
               </tr>
               <tr>
                 <td class="tm-text-left">Taiwan Tea</td>
                 <td>$4</td>
                 <td>$10</td>
                 <td>$4</td>
+                <td>-</td>
               </tr>
               <tr>
                 <td class="tm-text-left">Bubble Tea</td>
                 <td>$8</td>
                 <td>$12</td>
+                <td>-</td>
                 <td>-</td>
               </tr>
               <tr>
@@ -118,11 +123,13 @@ https://www.tooplate.com/view/2118-chilling-cafe
                 <td>$10</td>
                 <td>$10</td>
                 <td>$8</td>
+                <td>-</td>
               </tr>
               <tr>
                 <td class="tm-text-left">Original Tea</td>
                 <td>$12</td>
                 <td>$12</td>
+                <td>-</td>
                 <td>-</td>
               </tr>
             </table>
@@ -155,6 +162,42 @@ https://www.tooplate.com/view/2118-chilling-cafe
               </figcaption>
             </figure>
           </div>
+        </section>
+        <section class="tm-section">
+          <h2 class="tm-section-header">Special Items</h2>
+<div class="slider">
+  <div class="slides">
+    <input type="radio" name="r" id="r1" checked>
+    <input type="radio" name="r" id="r2" >
+    <input type="radio" name="r" id="r3" >
+    <div class="slide s1">
+      <img src="img/chilling-cafe-11.jpg" alt="" >
+      <div class="tm-slide-details">
+      <div class="tm-slide-name">Soft Deli Cup</div>
+      <div class="tm-slide-price">$25</div>
+    </div>
+    </div>
+    <div class="slide">
+      <img src="img/chilling-cafe-12.jpg" alt="" >
+      <div class="tm-slide-details">
+        <div class="tm-slide-name">Coffee Art</div>
+    <div class="tm-slide-price">$30</div>
+      </div>
+    </div>
+    <div class="slide">
+      <img src="img/chilling-cafe-13.jpg" alt="" >
+      <div class="tm-slide-details">
+        <div class="tm-slide-name">Speciality Tea</div>
+    <div class="tm-slide-price">$35</div>
+  </div>
+  </div>
+  </div>
+  <div id="navigation">
+    <label for="r1" class="bar"></label>
+    <label for="r2" class="bar"></label>
+    <label for="r3" class="bar"></label>
+  </div>
+</div>
         </section>
         <hr />
         <!-- About our cafe -->
